# MetalCxx

./: .clangd  .gitignore  CMakeLists.txt  Taskfile.yml  compile_commands.json  gen_compile_db.py  main.cc
cmake/: AddSwift.cmake
src/: App.swift  MetalView.swift  Metalic.cc  StdModule.cc  shader.swift  test.swift
